--- a/test.html
+++ b/test.html
@@ -5,6 +5,9 @@
         <title>Apple Workout Screenshot Maker</title>
     </head>
     <body>
-        <h1>test</h1>
+        <h1>Apple Workout Screenshot Maker</h1>
+        <p>Enter Workout Type</p>
+        <input id = "wktype">
+        <input id = "wk ">
     </body>
 </html>
