--- a/test.html
+++ b/test.html
@@ -6,8 +6,26 @@
     </head>
     <body>
         <h1>Apple Workout Screenshot Maker</h1>
-        <p>Enter Workout Type</p>
+        <label>workout type</label>
         <input id = "wktype">
-        <input id = "wk ">
+        <label>workout duration</label>
+        <input id = "wkduration">
+        <label>workout time</label>
+        <input id = "wktime">
+        <label>workout active calories</label>
+        <input id = "wkactivecalories">
+        <label>workout total calories</label>
+        <input id = "wktotalcalories">
+        <label>workout pace</label>
+        <input id = "wkpace">
+        <label>workout average heart rate</label>
+        <input id = "wkavghr">
+        <label>workout temperature</label>
+        <input id = "wktemp">
+        <label>workout location</label>
+        <input id = "wklocation">
+
+        <button id = "submit">submit</button>
+        <div id = "resultimg"></div>
     </body>
 </html>
