adding old files + js again

--- a/test.html
+++ b/test.html
@@ -8,24 +8,21 @@
         <h1>Apple Workout Screenshot Maker</h1>
         <label>workout type</label>
         <input id = "wktype">
-        <label>workout duration</label>
-        <input id = "wkduration">
         <label>workout time</label>
         <input id = "wktime">
+        <label>workout distance</label>
+        <input id = "wkdistance">
+        <label>workout elevation</label>
+        <input id = "wkelevation">
         <label>workout active calories</label>
-        <input id = "wkactivecalories">
+        <input id = "wkactivecal">
         <label>workout total calories</label>
-        <input id = "wktotalcalories">
-        <label>workout pace</label>
-        <input id = "wkpace">
-        <label>workout average heart rate</label>
-        <input id = "wkavghr">
-        <label>workout temperature</label>
-        <input id = "wktemp">
+        <input id = "wktotalcal">
         <label>workout location</label>
         <input id = "wklocation">
+        <label>workout temperature</label>
+        <input id = "wktemp">
 
-        <button id = "submit">submit</button>
-        <div id = "resultimg"></div>
+        <button onclick = "test()" id = "submit">submit</button>
     </body>
 </html>
